--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,10 +2,13 @@
 name = "leetcodesolver"
 version = "0.1.0"
 description = "LeetCodeSolver using crewAI"
-authors = [{ name = "Your Name", email = "you@example.com" }]
+authors = [
+    { name = "Le Anh Tuan", email = "latuannetnam@gmail.com" },
+]
 requires-python = ">=3.10,<3.13"
 dependencies = [
-    "crewai[tools]>=0.105.0,<1.0.0"
+    "crewai[tools]>=0.105.0,<1.0.0",
+    "loguru",
 ]
 
 [project.scripts]
@@ -16,8 +19,7 @@ replay = "leetcodesolver.main:replay"
 test = "leetcodesolver.main:test"
 
 [build-system]
-requires = ["hatchling"]
+requires = [
+    "hatchling",
+]
 build-backend = "hatchling.build"
-
-[tool.crewai]
-type = "crew"
