--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ requires-python = ">=3.10,<3.13"
 dependencies = [
     "crewai[tools]>=0.105.0,<1.0.0",
     "loguru",
+    "arize-phoenix-otel",
+    "openinference-instrumentation-crewai",
+    "openinference-instrumentation-litellm",
 ]
 
 [project.scripts]
